small spacing changes and bugfixes

--- a/src/sass/_agendaItemMaintenance.scss
+++ b/src/sass/_agendaItemMaintenance.scss
@@ -117,9 +117,6 @@
       align-items: baseline;
       flex-wrap: wrap;
 
-      .add-fp-link {
-        cursor: pointer;
-      }
       .add-legs-header {
         margin-bottom: 10px;
       }
@@ -220,9 +217,11 @@
         }
       }
       .add-frequent-positions {
-        display: flex;
         margin-top: 15px;
       }
+    }
+    .add-fp-link {
+      cursor: pointer;
     }
 
     .ai-maintenance-header-dd {
